[gd_scene load_steps=12 format=3 uid="uid://v8b7k25ot6il"]

[ext_resource type="PackedScene" uid="uid://d3734ub0danwd" path="res://Wagon.tscn" id="1"]
[ext_resource type="Script" path="res://Train.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dry2xni1ajlp8" path="res://Sprites/CartControler.png" id="2_dbt50"]
[ext_resource type="Texture2D" uid="uid://blq6yu4k6nvuj" path="res://Sprites/Shockwave.png" id="2_mt7dd"]
[ext_resource type="Texture2D" uid="uid://8girc8l4ajo6" path="res://Sprites/Wagon1.png" id="3_7ruko"]
[ext_resource type="Texture2D" uid="uid://dqdtb5u03c8kt" path="res://Sprites/Wagon2.png" id="4_8ts1c"]
[ext_resource type="Texture2D" uid="uid://kh5vwhma061o" path="res://Sprites/Wagon3.png" id="5_3l18f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o7h0v"]
radius = 32.0156

[sub_resource type="Animation" id="Animation_68nym"]
resource_name = "scaledown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(32, 32), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_uu0va"]
resource_name = "scaleup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(32, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qeffn"]
_data = {
"scaledown": SubResource("Animation_68nym"),
"scaleup": SubResource("Animation_uu0va")
}

[node name="Train" type="Node2D"]
script = ExtResource("2")

[node name="shockwave" type="StaticBody2D" parent="."]
show_behind_parent = true
scale = Vector2(1e-05, 1e-05)

[node name="Shockwave" type="Sprite2D" parent="shockwave"]
modulate = Color(1, 1, 1, 0.498039)
texture = ExtResource("2_mt7dd")

[node name="collision" type="CollisionShape2D" parent="shockwave"]
shape = SubResource("CircleShape2D_o7h0v")

[node name="anim" type="AnimationPlayer" parent="shockwave"]
libraries = {
"": SubResource("AnimationLibrary_qeffn")
}

[node name="Wagon_Indicator0" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(128, 0, -128, 0)
default_color = Color(0.647059, 0.960784, 0.772549, 1)

[node name="Wagon_Indicator" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(0, -16)
texture = ExtResource("2_dbt50")

[node name="Wagon1" parent="." instance=ExtResource("1")]
position = Vector2(-96, 0)
offset = -96

[node name="Wagon2" parent="." instance=ExtResource("1")]
position = Vector2(-32, 0)
wagon_texture = ExtResource("3_7ruko")
offset = -32

[node name="Wagon3" parent="." instance=ExtResource("1")]
position = Vector2(32, 0)
wagon_texture = ExtResource("4_8ts1c")
offset = 32

[node name="Wagon4" parent="." instance=ExtResource("1")]
position = Vector2(96, 0)
wagon_texture = ExtResource("5_3l18f")
offset = 96
